--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,8 @@ telegram.chat.id=8091718303
 # Redis (Railway Redis Plugin)
 spring.redis.host=${REDIS_HOST}
 spring.redis.port=${REDIS_PORT}
-spring.redis.password=${REDIS_PASSWORD}
+spring.redis.password=12345678
+spring.redis.ssl.enabled=true
 
 # PostgreSQL (Railway PostgreSQL Plugin)
 spring.datasource.url=${DATABASE_URL}
