--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,16 +17,19 @@ telegram.bot.token=8001489353:AAElbHuFrfQ3StxT6zog4LjekT-TN6DGgTM
 telegram.chat.id=8091718303
 
 # Redis (Railway Redis Plugin)
-spring.redis.host=${REDIS_HOST}
-spring.redis.port=${REDIS_PORT}
+spring.redis.host=redis.railway.internal
+spring.redis.port=6379
 spring.redis.password=12345678
-spring.redis.ssl.enabled=true
 
-# PostgreSQL (Railway PostgreSQL Plugin)
-spring.datasource.url=${DATABASE_URL}
+# PostgreSQL
+spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
+spring.datasource.username=postgres
+spring.datasource.password=SMPVJekLNHJMBYPFxGEHymmuNPQUFtWQ
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Kafka ? ?????? Kafka ?????Railway ?? Kafka Plugin
+# Kafka
 # spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
 # spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 # spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+# Docker Compose?????????
+spring.docker.compose.enabled=false
