--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,11 +21,14 @@ spring.redis.host=redis.railway.internal
 spring.redis.port=6379
 spring.redis.password=12345678
 
+# ??????????????????????????
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
 # PostgreSQL
-spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
-spring.datasource.username=postgres
-spring.datasource.password=SMPVJekLNHJMBYPFxGEHymmuNPQUFtWQ
-spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
+# spring.datasource.username=postgres
+# spring.datasource.password=SMPVJekLNHJMBYPFxGEHymmuNPQUFtWQ
+# spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Kafka
 # spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
