--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,9 @@ spring.redis.password=12345678
 # ??????????????????????????
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
+server.error.include-message=always
+server.error.include-binding-errors=always
+
 # PostgreSQL
 # spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
 # spring.datasource.username=postgres
