--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,13 +17,12 @@ telegram.bot.token=8001489353:AAElbHuFrfQ3StxT6zog4LjekT-TN6DGgTM
 telegram.chat.id=8091718303
 
 # Redis (Railway Redis Plugin)
-spring.redis.host=redis.railway.internal
-spring.redis.port=6379
-spring.redis.password=12345678
+spring.redis.host=${REDISHOST}
+spring.redis.port=${REDISPORT}
+spring.redis.password=${REDISPASSWORD}
 
 # ??????????????????????????
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-
 server.error.include-message=always
 server.error.include-binding-errors=always
 
