--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,7 @@ telegram.chat.id=8091718303
 spring.redis.host=${REDISHOST}
 spring.redis.port=${REDISPORT}
 spring.redis.password=${REDISPASSWORD}
-REDIS_URL=redis://default:12345678@redis.railway.internal:6379
 
-# ??????????????????????????
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 server.error.include-message=always
 server.error.include-binding-errors=always
@@ -37,5 +35,5 @@ server.error.include-binding-errors=always
 # spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
 # spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 # spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-# Docker Compose?????????
+# Docker Compose close
 spring.docker.compose.enabled=false
