--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ telegram.chat.id=8091718303
 spring.redis.host=${REDISHOST}
 spring.redis.port=${REDISPORT}
 spring.redis.password=${REDISPASSWORD}
+REDIS_URL=redis://default:12345678@redis.railway.internal:6379
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 server.error.include-message=always
